--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,12 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField 'String', "weatherstack_api_key", Weatherstack_key
+            resValue 'string', "weatherstack_api_key", Weatherstack_key
+        }
+        debug {
+            buildConfigField 'String', "weatherstack_api_key", Weatherstack_key
+            resValue 'string', "weatherstack_api_key", Weatherstack_key
         }
     }
 }
