--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,11 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0"
 
+    // RxJava
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.1'
+
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.8.1'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
