--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,7 +58,8 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0"
 
     // RxJava
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.10'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.8.1'
 
